src/objects/Meeting_Email_Send_MERC__c.object
<CustomObject>
    <description>Junction object used for custom ExactTarget Email integration for Meetings</description>
    <fields>
        <fullName>Bounce_Rate_MERC__c</fullName>
        <formula>Email_Send_Number_MERC__r.et4ae5__Bounce_Rate_del__c</formula>
        <label>Bounce Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Click_Through_Rate_MERC__c</fullName>
        <formula>Email_Send_Number_MERC__r.et4ae5__Click_Through_Rate__c</formula>
        <label>Click Through Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Date_Sent_MERC__c</fullName>
        <formula>Email_Send_Number_MERC__r.et4ae5__DateSent__c</formula>
        <label>Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deliverability_Rate_MERC__c</fullName>
        <formula>Email_Send_Number_MERC__r.et4ae5__Deliverability_Rate__c</formula>
        <label>Deliverability Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ET_Business_Unit_MERC__c</fullName>
        <label>ET Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ET_Data_Extension_Id_MERC__c</fullName>
        <label>ET Data Extension Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ET_Dedupe_Subscribers_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ET Dedupe Subscribers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ET_Email_ID_MERC__c</fullName>
        <label>ET Email ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ET_Email_Name_MERC__c</fullName>
        <label>ET Email Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ET_From_Address_MERC__c</fullName>
        <label>ET From Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ET_From_Email_MERC__c</fullName>
        <label>ET From Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ET_From_Name_MERC__c</fullName>
        <label>ET From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ET_Individual_Tracking_Disabled_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ET Individual Tracking Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ET_Recipients_Opted_In_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ET Recipients Opted In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ET_Reply_To_MERC__c</fullName>
        <label>ET Reply To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ET_Send_Definition_MERC__c</fullName>
        <label>ET Send Definition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ET_Sender_Profile_Id_MERC__c</fullName>
        <label>ET Sender Profile Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ET_Subject_Line_MERC__c</fullName>
        <label>ET Subject Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ET_Subject_MERC__c</fullName>
        <label>ET Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ET_Sync_Id_MERC__c</fullName>
        <label>ET Sync Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ET_Thumbnail_MERC__c</fullName>
        <label>ET Thumbnail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Name_MERC__c</fullName>
        <formula>Email_Send_Number_MERC__r.et4ae5__EmailName__c</formula>
        <label>Email Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Send_Number_MERC__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Email Send Number</label>
        <referenceTo>et4ae5__SendDefinition__c</referenceTo>
        <relationshipLabel>Meeting Email Sends</relationshipLabel>
        <relationshipName>Meeting_Email_Sends</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incomplete_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incomplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meeting_MERC__c</fullName>
        <label>Meeting</label>
        <referenceTo>Meeting_MERC__c</referenceTo>
        <relationshipLabel>Meeting Email Sends</relationshipLabel>
        <relationshipName>Meeting_Email_Sends</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Open_Rate_MERC__c</fullName>
        <formula>Email_Send_Number_MERC__r.et4ae5__Open_Rate__c</formula>
        <label>Open Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Retry_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Retry Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retry_Date__c</fullName>
        <label>Retry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date__c</fullName>
        <label>Scheduled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Status__c</fullName>
        <label>Send Status</label>
        <picklist>
            <picklistValues>
                <fullName>Create Sender Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create Send Definition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Start Send Definition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Send Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Send Created</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject_MERC__c</fullName>
        <formula>Email_Send_Number_MERC__r.et4ae5__Subject__c</formula>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unsubscribe_Rate_MERC__c</fullName>
        <formula>Email_Send_Number_MERC__r.et4ae5__Unsubscribe_Rate__c</formula>
        <label>Unsubscribe Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <label>Meeting Email Send</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Meeting Email Send #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Email Sends</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>